--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -45,6 +45,10 @@
     --RotationDeg: 0deg;
 
     --RotateIconAnimation: 0deg;
+    --RotatediceAnimation: 0deg;
+
+    --zoom-in-Animation: 1;
+    --zoom-out-Animation: 1;
 }
 
 @font-face {
@@ -368,6 +372,7 @@ h3[contenteditable]:hover {
 
 .svgContainer {
     background-color: rgba(128, 128, 128, 0.319);
+    /* background-color: red; */
     /* padding: 8px; */
     /* border-radius: 50%; */
     border-top-right-radius: var(--border-top-right-radius);
@@ -386,6 +391,49 @@ h3[contenteditable]:hover {
     /* overflow: hidden; */
     /* background-color: red; */
 
+}
+
+.deleteLayerParent {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    border-top-right-radius: var(--border-top-right-radius);
+    border-top-left-radius: var(--border-top-left-radius);
+    border-bottom-right-radius: var(--border-bottom-right-radius);
+    border-bottom-left-radius: var(--border-bottom-left-radius);
+    overflow: hidden;
+    z-index: 5;
+    /* height: 30px; */
+
+}
+
+.deleteLayer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 110%;
+    bottom: 0;
+    transition: all 0.5s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background: rgba(255, 131, 131, 0.5);
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
+    border: 1px solid rgba(255, 131, 131, 0.25);
+    cursor: pointer;
+}
+
+.deleteLayerParent:hover .deleteLayer {
+    top: 75%;
+}
+
+.mat-icon.x {
+    width: 30px;
+    height: 30px;
 }
 
 /* .testClass {
@@ -407,6 +455,14 @@ h3[contenteditable]:hover {
     width: 50px;
     height: 50px;
 }
+
+.mat-icon.roll {
+    width: 60px;
+    height: 60px;
+    transform: rotateZ(var(--RotatediceAnimation));
+    transition: all 1s ease;
+}
+
 
 
 
@@ -460,12 +516,18 @@ h3[contenteditable]:hover {
     /* border: 1px solid rgba(57, 144, 194, 0.175); */
 }
 
+.img:hover .HoverOn {
+    height: 140px;
+    left: -20%;
+}
+
+
 .HoverOnSetting {
     background-color: var(--theme1);
     position: absolute;
     left: -100%;
     width: 140px;
-    height: 0px;
+    height: 0;
     top: 50%;
     /* transform: translate(0%, calc(-50% + calc(var(--AvatarWidth)/2))); */
     border-radius: 16px;
@@ -484,7 +546,7 @@ h3[contenteditable]:hover {
 }
 
 .HoverOnSettingOpened {
-    height: 300px;
+    height: 370px;
 }
 
 
@@ -505,17 +567,12 @@ h3[contenteditable]:hover {
 }
 
 
-.img:hover .HoverOn {
-    height: 140px;
-    left: -20%;
-}
 
 
 .inputFile {
     background-color: red;
     opacity: 0;
     position: absolute;
-    z-index: 999;
     cursor: pointer;
 
 }
@@ -1009,7 +1066,6 @@ h3[contenteditable]:hover {
     border-radius: 4px;
     margin-right: 25px;
     position: relative;
-    z-index: 1;
     box-sizing: border-box;
     /* padding: 10px; */
 
@@ -1034,7 +1090,7 @@ h3[contenteditable]:hover {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 999999;
+    z-index: 10;
     background-color: rgba(0, 0, 0, 0.403);
     display: flex;
     justify-content: center;
@@ -1072,36 +1128,32 @@ h3[contenteditable]:hover {
 .popUpButtonRight {
     border-radius: 16px;
     background-color: var(--theme1);
-    color: white;
+    color: black;
     border: none;
     padding: 12px 20px;
     font-size: 16px;
+    cursor: pointer;
     /* min-width: 100px; */
 
-}
 
-/* .popUpButtonLeft::before {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: red;
-    clip-path: circle(var(--size) at left center);
-    transform: 0.4s all;
 
 }
-
-.popUpButtonLeft::before:hover {
-    --size: 300px;
-    background-color: green;
-} */
 
 
 .popUpButtonLeft {
     position: absolute;
     left: 16px;
     top: 16px;
+    box-shadow: 0 0 20px rgba(4, 167, 139, 0.5);
+    background: rgba(66, 233, 205, 0.5);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(66, 233, 205, 0.25);
+    transition: 0.5s all ease;
+}
+
+.popUpButtonLeft:hover {
+    box-shadow: 10px 10px 20px rgba(4, 167, 139, 0.9);
 
 }
 
@@ -1109,7 +1161,20 @@ h3[contenteditable]:hover {
     position: absolute;
     right: 16px;
     top: 16px;
-    background-color: var(--dangerColor);
+    box-shadow: 0 0 20px rgba(255, 0, 0, 0.4);
+
+    background: rgba(228, 129, 136, 0.7);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    /* border: 1px solid rgba(228, 129, 136, 0.25); */
+    transition: 0.5s all ease;
+
+}
+
+
+
+.popUpButtonRight:hover {
+    box-shadow: 10px 10px 20px rgba(255, 0, 0, 0.5);
 
 }
 
@@ -1154,12 +1219,30 @@ h3[contenteditable]:hover {
     width: 50px;
     height: 50px;
     cursor: pointer;
+    transition: 0.5s all ease;
 }
+
+
 
 .rotate {
     /* transform: rotateY(180deg); */
     transform: rotateY(180deg) rotateZ(var(--RotateIconAnimation));
     transition: 1s all;
+    /* transition: all 1s ease; */
+}
+
+
+.zoom-in,
+.zoom-out {
+    transition: 0.4s all ease;
+}
+
+.zoom-in {
+    transform: scale(var(--zoom-in-Animation));
+}
+
+.zoom-out {
+    transform: scale(var(--zoom-out-Animation));
 }
 
 .transparentContainerToggle {
@@ -1210,7 +1293,6 @@ h3[contenteditable]:hover {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 99;
 }
 
 .back1,
