--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -570,7 +570,7 @@ h3[contenteditable]:hover {
 
 
 .inputFile {
-    background-color: red;
+    /* background-color: red; */
     opacity: 0;
     position: absolute;
     cursor: pointer;
@@ -1191,6 +1191,8 @@ h3[contenteditable]:hover {
     position: relative;
     /* flex: 8; */
     height: 80%;
+
+    box-shadow: 0 0 20px rgb(33 33 33/ 50%);
     /* margin: 16px; */
     /* border-radius: 16px; */
 
@@ -1210,14 +1212,17 @@ h3[contenteditable]:hover {
     width: 25%;
     /* flex: 1; */
     height: 10%;
+    box-shadow: 0 0 20px rgb(33 33 33/ 50%);
+    border-radius: 16px;
+    padding: 0px 200px;
 
 
 }
 
 .mat-icon.editImg {
     /* background-color: red; */
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     cursor: pointer;
     transition: 0.5s all ease;
 }
