--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,6 +4,8 @@
 
     --boldFont: font2Bold;
     --lightFont: font2Regular;
+    --MediumFont: font2Medium;
+    
     --nameFontSize: 35px;
     --titleFontSize: 20px;
     --descFontSize: 20px;
@@ -54,6 +56,11 @@
 @font-face {
     font-family: font2Regular;
     src: url('./../../assets/font/font2/Ubuntu-Light.ttf');
+}
+
+@font-face {
+    font-family: font2Medium;
+    src: url('./../../assets/font/font2/Ubuntu-Medium.ttf');
 }
 
 @font-face {
@@ -211,7 +218,7 @@
 
 .leftCol {
     /* background-color: red; */
-    flex: 1;
+    /* flex: 1; */
     /* height: 500px; */
 
 }
@@ -219,12 +226,16 @@
 .rightCol {
     /* background-color: green; */
 
-    flex: 1;
+    /* flex: 1; */
 }
 
 .rest {
     height: 80%;
     /* background-color: blue; */
+}
+
+#LowerLeft {
+    /* background-color: green; */
 }
 
 .column {
@@ -522,6 +533,51 @@ h3[contenteditable]:hover {
 }
 
 
+.HoverOnEdu {
+    background-color: var(--theme1);
+    position: absolute;
+    left: 0;
+    height: 0px;
+    /* height: 140px;
+    left: -20%; */
+    right: 100%;
+    top: 10px;
+    transform: translate(0%, -50%);
+    width: 30px;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    transition: all 0.4s;
+    overflow: hidden;
+
+    /* background: rgba(57, 144, 194, 0.35);
+    -webkit-backdrop-filter: blur(11px);
+    backdrop-filter: blur(11px); */
+    /* border: 1px solid rgba(57, 144, 194, 0.175); */
+}
+
+.EducationContainer:hover .HoverOnEdu {
+    height: 140px;
+    left: -10%;
+}
+
+.addEdu {
+    flex: 1;
+    transition: 0.4s all;
+}
+
+.addEdu:hover {
+    background-color: var(--theme12);
+}
+
+
+
+
+
+
+
 .HoverOnSetting {
     background-color: var(--theme1);
     position: absolute;
@@ -616,26 +672,33 @@ h3[contenteditable]:hover {
 
 .example-list {
     /* width: 500px; */
-    max-width: 100%;
+    /* max-width: 100%; */
     border: solid 1px #ccc;
-    height: 100%;
+    /* height: 100%; */
     display: block;
     background: white;
     border-radius: 10px;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* display: flex; */
+    /* background-color: black; */
+    flex: 1;
+    width: 50%;
 
 }
 
 .row {
     /* padding: 20px 10px; */
-    height: var(--rowSize);
+    min-height: var(--rowSize);
     border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
     box-sizing: border-box;
-    cursor: move;
-    /* background: white; */
+    /* cursor: move; */
+    /* background: pink; */
     font-size: 14px;
+}
+
+.addNewEdu {
+    cursor: pointer;
 }
 
 .cdk-drag-preview {
@@ -1334,4 +1397,233 @@ h3[contenteditable]:hover {
     visibility: hidden;
     transition: none;
 
+}
+
+.EducationContainer {
+    /* background-color: cyan; */
+    position: relative;
+}
+
+.EducationRow {
+    /* background-color: cyan; */
+    position: relative;
+    margin-top: 16px;
+
+}
+
+.EducationRow:hover .hand {
+    opacity: 0.5;
+}
+
+
+
+.ColumnTitle {
+    font-family: var(--boldFont);
+    font-size: 28px;
+    font-weight: 900;
+}
+
+.Title {
+    outline: none;
+    font-family: var(--MediumFont);
+    font-weight: 500;
+    font-size: 22px;
+    transition: all 0.2s;
+    padding: 5px;
+    border-radius: 16px;
+    border: none;
+    background-color: transparent;
+    /* font-weight: 700; */
+    padding-left: 16px;
+
+}
+
+
+
+
+
+
+.Title:focus {
+    border-bottom: var(--theme1) 3px solid;
+}
+
+.Title:hover {
+    background-color: rgba(128, 128, 128, 0.078);
+    /* box-sizing: border-box; */
+}
+
+.dates {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* background-color: red; */
+}
+
+.date {
+    flex: 1;
+}
+
+
+[contenteditable=true]:empty:before {
+    content: attr(placeholder);
+    pointer-events: none;
+    opacity: 0.5;
+}
+
+
+
+.restInput {
+    outline: none;
+    font-family: var(--lightFont);
+    font-size: 18px;
+    transition: all 0.2s;
+    padding: 5px;
+    border-radius: 16px;
+    border: none;
+    background-color: transparent;
+    font-weight: 700;
+    /* width: 100%; */
+    padding-left: 16px;
+
+}
+
+
+
+.restInput:focus {
+    border-bottom: var(--theme1) 3px solid;
+}
+
+.restInput:hover {
+    background-color: rgba(128, 128, 128, 0.078);
+    /* box-sizing: border-box; */
+}
+
+.hand {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    opacity: 0;
+    /* transition: 0.4s all ease; */
+}
+
+.notShow {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-family: var(--lightFont);
+    font-size: 18px;
+    /* background-color: red; */
+}
+
+.alignLeft {
+    display: flex;
+    justify-content: flex-start;
+    opacity: 0.5;
+}
+
+.alignRight {
+    display: flex;
+    justify-content: flex-end;
+    opacity: 0.5;
+    padding-right: 16px;
+}
+
+.pulseAnim {
+    animation: pulse 2s infinite linear;
+}
+
+@keyframes pulse {
+    0% {
+        background-color: rgba(128, 128, 128, 0.00);
+    }
+
+    5% {
+        background-color: rgba(128, 128, 128, 0.01);
+    }
+
+    10% {
+        background-color: rgba(128, 128, 128, 0.03);
+    }
+
+    15% {
+        background-color: rgba(128, 128, 128, 0.04);
+    }
+
+    20% {
+        background-color: rgba(128, 128, 128, 0.06);
+    }
+
+    25% {
+        background-color: rgba(128, 128, 128, 0.07);
+    }
+
+    30% {
+        background-color: rgba(128, 128, 128, 0.09);
+    }
+
+    35% {
+        background-color: rgba(128, 128, 128, 0.10);
+    }
+
+    40% {
+        background-color: rgba(128, 128, 128, 0.12);
+    }
+
+    45% {
+        background-color: rgba(128, 128, 128, 0.14);
+    }
+
+    50% {
+        background-color: rgba(128, 128, 128, 0.15);
+    }
+
+    55% {
+        background-color: rgba(128, 128, 128, 0.14);
+    }
+
+    60% {
+        background-color: rgba(128, 128, 128, 0.12);
+    }
+
+    65% {
+        background-color: rgba(128, 128, 128, 0.11);
+    }
+
+    70% {
+        background-color: rgba(128, 128, 128, 0.09);
+    }
+
+    75% {
+        background-color: rgba(128, 128, 128, 0.08);
+    }
+
+    80% {
+        background-color: rgba(128, 128, 128, 0.06);
+    }
+
+    85% {
+        background-color: rgba(128, 128, 128, 0.05);
+    }
+
+    90% {
+        background-color: rgba(128, 128, 128, 0.03);
+    }
+
+    95% {
+        background-color: rgba(128, 128, 128, 0.02);
+    }
+
+    100% {
+        background-color: rgba(128, 128, 128, 0.00);
+    }
+
+
+}
+
+.handle{
+    cursor: grab;
 }
