--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -92,7 +92,7 @@
     </div>
 </div>
 
-<div class="currentPage" (click)="LoseFocus($event)">
+<div class="currentPage">
     <!-- <div class="tempImage">
         <img class="tmepImgInside" src="../../assets/test.jpg" alt="">
         <div (cdkDragMoved)="dragMoved($event)" class="croppingBox" cdkDragBoundary=".tempImage" cdkDrag>
@@ -112,8 +112,10 @@
                             <mat-icon svgIcon="x" class="x"></mat-icon>
                         </div>
                     </div>
-
-                    <mat-icon svgIcon="p2" class="avatar"></mat-icon>
+                    <div class="avatarParent">
+                        <mat-icon svgIcon="p2" class="avatar"></mat-icon>
+                    </div>
+                   
 
 
 
@@ -633,98 +635,9 @@
                 <div cdkDropListConnectedTo="LowerRight" cdkDropList [cdkDropListData]="leftMovies"
                     (cdkDropListDropped)="drop($event)">
                     <div class="row" *ngFor="let movie of leftMovies">{{movie}}
-
-
-                        <div class="EducationContainer" cdkDropList [cdkDropListData]="EducationList"
-                            (cdkDropListDropped)="dropEducation($event)">
-
-                            <div class="HoverOnEdu addNewEdu">
-
-                                <svg (click)="AddNewEducation()" class="addEdu" width="32" height="32"
-                                    fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M12 20.75a8.75 8.75 0 1 1 0-17.5 8.75 8.75 0 0 1 0 17.5ZM12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z">
-                                    </path>
-                                    <path
-                                        d="M12 7a.625.625 0 0 1 .625.625v3.75h3.75a.624.624 0 1 1 0 1.25h-3.75v3.75a.624.624 0 1 1-1.25 0v-3.75h-3.75a.625.625 0 1 1 0-1.25h3.75v-3.75A.625.625 0 0 1 12 7Z">
-                                    </path>
-                                </svg>
-
-                                <svg class="addEdu" width="30" height="30" fill="none" stroke="currentColor"
-                                    stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
-                                    viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M10 11v6m4-6v6M4 7h16m-1 0-.867 12.142A2 2 0 0 1 16.138 21H7.862a2 2 0 0 1-1.995-1.858L5 7h14Zm-4 0V4a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v3h6Z">
-                                    </path>
-                                </svg>
-                            </div>
-
-                            <h2 class="ColumnTitle">Education</h2>
-
-                            <div (click)="testFocus($event,education)" class="EducationRow"
-                                *ngFor="let education of EducationList" cdkDrag>
-
-
-                                <div class="handle" cdkDragHandle>
-                                    <mat-icon svgIcon="hand" class="hand"></mat-icon>
-                                </div>
-
-
-                                <h2 id="eduTitle" (focusout)="printContent($event,education)" contenteditable="true"
-                                    class="Title" placeholder="Study Program">{{education.eduTitle}}</h2>
-
-
-                                <h2 id="eduPlace" (focusout)="printContent($event,education)" contenteditable="true"
-                                    class="restInput" placeholder="instituation">{{education.eduPlace}}</h2>
-
-
-
-
-                                <h2 id="eduLocation" *ngIf="education.showFields"
-                                    (focusout)="printContent($event,education)" contenteditable="true" class="restInput"
-                                    placeholder="Location">{{education.eduLocation}}</h2>
-
-
-
-                                <div class="dates" *ngIf="education.showFields">
-                                    <h2 id="eduBefore" (focusout)="printContent($event,education)"
-                                        contenteditable="true" class="restInput date" placeholder="from">{{education.eduBefore}}</h2>
-                                      
-
-
-
-
-
-                                    <h2 id="eduAfter" (focusout)="printContent($event,education)" contenteditable="true"
-                                        class="restInput date" placeholder="To">{{education.eduAfter}}</h2>
-                                </div>
-
-                                <div class="notShow"
-                                    *ngIf="!education.showFields && (education.eduBefore!='' && education.eduAfter!='' || education.eduLocation!='')">
-
-                                    <h2 contenteditable="true" class="restInput date alignLeft">
-                                        {{education.eduAfter}} - {{education.eduBefore}}</h2>
-
-                                    <h2 contenteditable="true" class="restInput date alignRight">
-                                        {{education.eduLocation}}</h2>
-
-
-                                </div>
-
-                                <h2 *ngIf="education.showFields || this.education.eduDesc!=''" id="eduDesc"
-                                    (focusout)="printContent($event,education)" contenteditable="true" class="restInput"
-                                    placeholder="Bechelor/Courses">{{education.eduDesc}}</h2>
-
-
-
-
-
-                            </div>
-
-
-
-
-                        </div>
+                        
+                        <app-education></app-education>
+                        
                     </div>
 
 
